Remove Replit auth integration and prepare for production deployment
- Removed replitAuthId field from users schema
- Added migration to drop replit_auth_id column from database
- Updated deployment configuration for new GitHub repository
- Added production deployment documentation

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Bluequee" />
     <link rel="apple-touch-icon" href="/generated-icon.png" />
     <link rel="icon" href="/generated-icon.png" />
-    <title>Bluequee - Rural Healthcare Management</title>
+    <title>Bluequee Health Management</title>
   </head>
   <body>
     <div id="root"></div>
